<resources>
    <string name="app_name">MovieNtf</string>
    <string name="title">MOVIENTF</string>
    <string name="inicial_icon">N</string>
    <string name="txt_iniciar_sesion">Inicia sesión</string>
    <string name="hint_email">Correo Electrónico:</string>
    <string name="hint_pwd">Contraseña:</string>
    <string name="txt_necesitas_ayuda">¿Necesitas ayuda?</string>
    <string name="txt_primera_vez">¿Primera vez en MovieNtF?</string>
    <string name="txt_suscribete">Suscribete ahora.</string>
    <string name="lbl_preguntas_frecuentes">Preguntas frecuentes</string>
    <string name="lbl_centro_ayuda">Centro de ayuda</string>
    <string name="lbl_privacidad">Privacidad Link...</string>
    <string name="msg_error">Un error ha ocurrido</string>
    <string name="lbl_bienvenido">Bienvenido</string>
    <string name="lbl_inicia_sesion">INICIA SESIÓN</string>
    <string name="msg_token_error">Error en token</string>
    <string name="msg_is_null_or_empty">el Usuario o contraseña son incorrectos</string>
    <string name="txt_question">¿Quieres ver MovieNtF ya?</string>
    <string name="txt_msg_inf">Ingresa tu e-mail para crear una cuenta de\nMovieNtf o inicia sesión en la tuya.</string>
    <string name="txt_comienza">Comienza ya</string>
    <string name="lbl_msg1_f1">Series y películas\nilimitadas y\nmucho más</string>
    <string name="lbl_msg2_f1">Disfruta donde quieras.\nCancela cuando quieras.</string>
    <string name="lbl_msg1_f2">Cancela online\ncuando quieras</string>
    <string name="lbl_msg2_f2">Únete hoy, no hay motivos\npara esperar.</string>
    <string name="lbl_msg1_f3">Disfruta\ndonde quieras</string>
    <string name="lbl_msg2_f3">Ve contenido en tu teléfono,\ntablet, computadora y tv.</string>
    <string name="lbl_msg1_f4">Hay un plan \npara cada fan</string>
    <string name="lbl_msg2_f4">planes desde $99.</string>
    <string name="msg_send_email">Consulta tu e-mail\nacabamos de enviarte un enlace\npara continuar.</string>
    <string name="msg_error_email">escriba un e-mail \npara continuar</string>
    <string name="msg_error_email_pwd">escriba email y contraseña. \nSon nullos</string>
    <string name="text_cerrar">X</string>
    <string name="msg_success">Se ha guardó correctamente.</string>
    <string name="lbl_quien">¿Quién está viendo ahora?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>