<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.presentation.views.VPThreeFragment">

    <TextView
        android:id="@+id/tv_lbl_msg1_f3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_msg1_f3"
        android:textSize="@dimen/txt_size_24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_lbl_msg2_f3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_msg2_f3"
        android:textSize="@dimen/txt_size_18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/space_40dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lbl_msg1_f3"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_msg2_f1"
        android:textSize="@dimen/txt_size_18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="gone"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>