<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.views.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_transp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_movie"
        android:alpha="0.70">

        <View
            android:elevation="@dimen/space_15dp"
            android:id="@+id/v_trasparence"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:alpha="0.80"            />

        </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/tv_nameApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/red"
        android:textSize="@dimen/txt_size_24sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/space_15dp"
        android:layout_marginTop="@dimen/space_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/space_80dp"
        android:layout_marginStart="@dimen/space_30dp"
        android:layout_marginEnd="@dimen/space_30dp"
        android:layout_marginBottom="@dimen/space_190dp"
        android:elevation="@dimen/space_12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_iniciar_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_25dp"
            android:text="@string/txt_iniciar_sesion"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <EditText
            android:id="@+id/ed_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_10dp"
            android:layout_marginTop="@dimen/space_25dp"
            android:layout_marginStart="@dimen/space_30dp"
            android:layout_marginEnd="@dimen/space_30dp"
            android:background="@drawable/bg_black"
            android:hint="@string/hint_email"
            android:textColorHint="@color/dark_gray"
            android:textSize="@dimen/txt_size_16sp"
            android:textColor="@color/divider"
            android:text="juan9923@hotmail.com"
            android:maxLines="@integer/min_lines"
            app:layout_constraintTop_toBottomOf="@id/tv_iniciar_sesion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <EditText
            android:id="@+id/ed_pwd"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_10dp"
            android:layout_marginTop="@dimen/space_20dp"
            android:layout_marginStart="@dimen/space_30dp"
            android:layout_marginEnd="@dimen/space_30dp"
            android:background="@drawable/bg_black"
            android:hint="@string/hint_pwd"
            android:textColorHint="@color/dark_gray"
            android:textSize="@dimen/txt_size_16sp"
            android:textColor="@color/divider"
            android:text="Password123"
            android:maxLines="@integer/min_lines"
            app:layout_constraintTop_toBottomOf="@id/ed_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/btn_iniciar_Sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_iniciar_sesion"
            android:textSize="@dimen/txt_size_16sp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:background="@drawable/bg_bottom_red"
            android:padding="@dimen/space_8dp"
            android:layout_marginTop="@dimen/space_25dp"
            android:layout_marginStart="@dimen/space_30dp"
            android:layout_marginEnd="@dimen/space_30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_pwd"/>

        <TextView
            android:id="@+id/tv_necesitas_ayuda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_necesitas_ayuda"
            android:textSize="@dimen/txt_size_14sp"
            android:textColor="@color/dark_gray"
            android:padding="@dimen/space_8dp"
            android:layout_marginTop="@dimen/space_10dp"
            android:layout_marginStart="@dimen/space_30dp"
            android:layout_marginEnd="@dimen/space_30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_iniciar_Sesion"/>

        <TextView
            android:id="@+id/tv_primera_vez"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_primera_vez"
            android:textSize="@dimen/txt_size_16sp"
            android:textColor="@color/dark_gray"
            android:layout_marginTop="@dimen/space_20dp"
            android:layout_marginStart="@dimen/space_30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_necesitas_ayuda"/>

        <TextView
            android:id="@+id/tv_suscribete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_suscribete"
            android:textSize="@dimen/txt_size_16sp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/space_10dp"
            android:layout_marginEnd="@dimen/space_30dp"
            android:layout_marginBottom="@dimen/space_25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_primera_vez"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:elevation="@dimen/space_10dp"
        android:id="@+id/vLogin_trasparence"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondaryDark"
        android:layout_marginTop="@dimen/space_80dp"
        android:layout_marginBottom="@dimen/space_190dp"
        android:layout_marginStart="@dimen/space_30dp"
        android:layout_marginEnd="@dimen/space_30dp"
        app:layout_constraintStart_toStartOf="@id/constrain_login"
        app:layout_constraintEnd_toEndOf="@id/constrain_login"
        app:layout_constraintTop_toTopOf="@id/constrain_login"
        app:layout_constraintBottom_toBottomOf="@id/constrain_login"
        android:alpha="0.70"  />

</androidx.constraintlayout.widget.ConstraintLayout>